--- a/src/app/code/Source/App/view/frontend/templates/product/index.phtml
+++ b/src/app/code/Source/App/view/frontend/templates/product/index.phtml
@@ -44,6 +44,7 @@ endif;
     }
 
     .item {
+        border: 1px solid grey;
         transition: box-shadow .3s;
         width: 250px;
         margin: 50px;
